dhcpy6d (0.7.99-1) UNRELEASED; urgency=medium

  [ Henri Wahl ]
  * New upstream release candidate

  [ Axel Beckert ]
  * Bump debhelper compatibility level to 12.
    + Build-depend on "debhelper-compat (= 12)" to replace debian/compat.
    + Drop undocumented build-dependency on dh-systemd, no more needed.

 -- Henri Wahl <h.wahl@ifw-dresden.de>  Tue, 05 Mar 2019 14:30:00 +0200

dhcpy6d (0.7.3-1) UNRELEASED; urgency=medium

  * New upstream release
    + added ignore_mac option to work with ppp interfaces

 -- Henri Wahl <h.wahl@ifw-dresden.de>  Thu, 25 Oct 2018 14:30:00 +0200

dhcpy6d (0.7.2.-1) UNRELEASED; urgency=medium

  * New upstream release
    + fix for MySQLdb.IntegrityError

 -- Henri Wahl <h.wahl@ifw-dresden.de>  Fri, 15 Jun 2018 7:30:00 +0200

dhcpy6d (0.7.1-1) UNRELEASED; urgency=medium

  * New upstream release
    + fixed recycling of prefixes

 -- Henri Wahl <h.wahl@ifw-dresden.de>  Mon, 11 Jun 2018 10:30:00 +0200

dhcpy6d (0.7-1) UNRELEASED; urgency=medium

  * New upstream release
    + added ntp_server option
    + added request limits
    + allow to inject prefix - e.g. changed prefix from ISP
    + optimized time requests
    + ignore unknown clients
    + fixes for prefix delegation

 -- Henri Wahl <h.wahl@ifw-dresden.de>  Mon, 30 Apr 2018 20:30:00 +0200

dhcpy6d (0.6-1) UNRELEASED; urgency=medium

  * New upstream release
    + prefix delegation
    + fixes

 -- Henri Wahl <h.wahl@ifw-dresden.de>  Fri, 15 Sep 2017 11:30:00 +0200

dhcpy6d (0.5-1) unstable; urgency=medium

  * New upstream release
    + Reply CONFIRM requests with NotOnLink to force clients to get new address
    + Added --prefix option to be used for dynamic prefixes
    + Allow using PostgreSQL database for volatile and config storage
    + Added category 'dns' for DNS-based IP-address retrieval
    + Systemd integration

 -- Henri Wahl <h.wahl@ifw-dresden.de>  Mon, 29 May 2017 10:00:00 +0200

dhcpy6d (0.4.3-1) unstable; urgency=low

  [ Henri Wahl ]